test/files/invalid/array_syntax_error.fbs
struct Foo {
  x: [bool; 4];
}