test/files/invalid/array_syntax_error.stderr
error: unrecognized token `;`, expected one of ":", "]"
  ┌─ test/files/invalid/array_syntax_error.fbs:2:11
  │
2 │   x: [bool; 4];
  │           ^

Error: Bailing because of errors
